--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+.responsive3{
+  width: 3%
+}
 .responsive30{
   width: 35%
 }
@@ -8,11 +11,11 @@
   width: 10%;
 }
 
-.responsive10:hover {
+.responsive10:hover, .arrow:hover {
   transform: scale(1.3);
 }
 
-.responsive10 {
+.responsive10, .arrow {
   transition: all .2s ease-in-out;
 }
 a, ul{
@@ -71,9 +74,3 @@ color:  black;
     -webkit-background-clip: text;
     background-clip: text;
 }
-
-/*.bottom-align-text {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}*/
