--- a/jquery.fullPage.css
+++ b/jquery.fullPage.css
@@ -1,5 +1,5 @@
 /*!
- * fullPage 2.8.9
+ * fullPage 2.9.3
  * https://github.com/alvarotrigo/fullPage.js
  * MIT licensed
  *
@@ -60,7 +60,46 @@ html.fp-enabled,
     float: left;
     position: relative;
 }
+.fp-controlArrow {
+    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+    -moz-user-select: none; /* mozilla browsers */
+    -khtml-user-select: none; /* webkit (konqueror) browsers */
+    -ms-user-select: none; /* IE10+ */
+    position: absolute;
+    z-index: 4;
+    top: 50%;
+    cursor: pointer;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    margin-top: -38px;
+    -webkit-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+}
+.fp-controlArrow.fp-prev {
+    left: 40px;
+    width: 0;
+    border-width: 16.5px 16.5px 20px 0;
+    border-color: transparent black transparent transparent;
+}
+.fp-controlArrow.fp-next {
+    right: 40px;
+    border-width:16.5px 0 16.5px 20px;
+    border-color: transparent transparent transparent black;
+}
 
+.fp-controlArrow.fp-top {
+    top: 40px;
+    width: 0;
+    border-width: 16.5px 16.5px 20px 0;
+    border-color: transparent black transparent transparent;
+}
+.fp-controlArrow.fp-bot {
+    bottom: 40px;
+    border-width:16.5px 0 16.5px 20px;
+    border-color: transparent transparent transparent black;
+}
 .fp-scrollable {
     overflow: hidden;
     position: relative;
